--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "link-preview-js": "^3.0.0",
     "open": "^8.4.2",
     "release-it": "^15.10.3",
-    "sharp": "^0.32.6",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.8.1",
     "typedoc": "^0.27.9",
@@ -74,8 +73,7 @@
   "peerDependencies": {
     "audio-decode": "^2.1.3",
     "jimp": "^0.16.1",
-    "link-preview-js": "^3.0.0",
-    "sharp": "^0.32.6"
+    "link-preview-js": "^3.0.0"
   },
   "peerDependenciesMeta": {
     "audio-decode": {
@@ -87,9 +85,6 @@
     "link-preview-js": {
       "optional": true
     },
-    "sharp": {
-      "optional": true
-    }
   },
   "packageManager": "yarn@1.22.19",
   "engines": {
