--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     "@cacheable/node-cache": "^1.4.0",
     "@hapi/boom": "^9.1.3",
     "@whiskeysockets/eslint-config": "github:whiskeysockets/eslint-config",
-    "crypto-js": "^4.2.0",
     "async-mutex": "^0.5.0",
     "axios": "^1.6.0",
+    "cache-manager": "^6.4.3",
+    "crypto-js": "^4.2.0",
     "libsignal": "github:WhiskeySockets/libsignal-node",
     "lodash": "^4.17.21",
     "music-metadata": "^7.12.3",
-    "pino": "^9.6",
+    "pino": "^9.7.0",
     "protobufjs": "^7.2.4",
     "ws": "^8.13.0"
   },
@@ -59,11 +60,11 @@
     "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.0.0",
     "jest": "^27.0.6",
-    "jimp": "^0.16.1",
+    "jimp": "^1.6.0",
     "json": "^11.0.0",
     "link-preview-js": "^3.0.0",
     "open": "^8.4.2",
-    "release-it": "^15.10.3",
+    "release-it": "^19.0.2",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.8.1",
     "typedoc": "^0.27.9",
@@ -72,7 +73,7 @@
   },
   "peerDependencies": {
     "audio-decode": "^2.1.3",
-    "jimp": "^0.16.1",
+    "jimp": "^1.6.0",
     "link-preview-js": "^3.0.0"
   },
   "peerDependenciesMeta": {
